--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.41'
+    ext.kotlin_coroutine = '1.3.0'
+    ext.espresso = '3.0.2'
+
     repositories {
         google()
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath group: 'com.layer', name: 'gradle-git-repo-plugin', version: '2.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
@@ -24,4 +30,15 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    buildToolsVersion = '28.0.3'
+    kotlin_version = '1.3.41'
+    koinVersion = '2.0.1'
+    appCompatVersion = '1.1.0'
+    espressoVersion = '3.2.0'
+    fragmentVersion = '1.1.0'
+    minSdkVersion = 24
+    targetSdkVersion = 28
+    compileSdkVersion = 28
 }
