--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: find . -name "*.json"|node ~/jsoncheck.js
+    - name: install jq
+      run: sudo apt-get install jq
+    - run: find . -name "*.json"| xargs sh jsoncheck.sh
+
+    
       
