--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: install jq
       run: sudo apt-get install jq
-    - run: find . -name "*.json"| xargs sh checkjson.sh
+    - run: find . -name "*.json"| xargs -n1 cat | jq
 
     
       
