--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: install jq
       run: sudo apt-get install jq
-    - run: scratch.json | jq
+    - run: cat ./scratch.json | jq
 
     
       
