--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,4 @@ jobs:
     - uses: actions/checkout@v2 
     - run: ls -l
     - run: pwd
-    - run: cat ./scratch.json | jq
+    - run: find . -name "*.json"| xargs sh checkjson.sh
