--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,5 @@ jobs:
     - uses: actions/checkout@v2 
     - run: ls -l
     - run: pwd
-    - run: find . -name "*.json"| xargs sh checkjson.sh
+    - run: find . -name "*.json"| xargs -n1 echo
+    - run: find . -name "*.json"| xargs -n1 cat | jq
