--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,5 @@ jobs:
     - run: ls -l
     - run: pwd
     - run: find . -name "*.json"| xargs -n1 echo
+    - run: find . -name "*.json"| xargs -n1 cat
     - run: find . -name "*.json"| xargs -n1 cat | jq
