--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,4 +22,4 @@ jobs:
     - run: pwd
     - run: find . -name "*.json"| xargs -n1 echo
     - run: find . -name "*.json"| xargs -n1 cat
-    - run: find . -name "*.json"| xargs -n1 cat | jq
+    - run: find . -name "*.json"| xargs -n1 cat | jq '.'
