--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/checkout@v2 
     - run: | 
           find . -name "*.json"| xargs -n1 cat | jq '.' | >> comments
-          echo comments
+          cat comments
