--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: checkJsonFile
         run: |
-          find . -name "*.json" | xargs -n1 cat | jq '.'
+          find . -name "*.json" | xargs -n1 cat | jq '.' 2>&1 > result
+          echo $result
 
       - name: check JsonFile by Shell
         if: always()
